--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <div class="barraNavegacion">
             <a href="#">
-                <img src="./Iconos/logo-2.png" alt="Logo Moxy">
+                <img src="./iconos/logo-2.png" alt="Logo Moxy">
             </a>
             <h1>Moxy</h1>
         </div>
@@ -56,7 +56,7 @@
                 <article>
                     <div class="portada">
                         <h3>Ejemplo</h3>
-                        <p class="descripcion">
+                        <p>
                             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur sequi ex ducimus
                             dolores
                             sed
@@ -127,8 +127,8 @@
                 </article>
                 <article>
                     <div class="imagenes">
-                        <img class="tafi" src="./Img/paisaje-tafi-main.jpg" alt="Paisaje Tafi">
-                        <img class="tafi" src="./Img/paisaje-cabaña-main.jpg" alt="Pisaje portada">
+                        <img src="./img/paisaje-tafi-main.jpg" alt="paisaje tafi">
+                        <img src="./img/paisaje-cabaña-main.jpg" alt="paisaje portada">
                     </div>
                 </article>
                 <article>
@@ -175,30 +175,22 @@
                     a
                     cada necesidad y expectativa.
                 </p>
-                <img src="./Img/cabaña-tafi.jpg" alt="">
+                <img src="./img/cabaña-tafi.jpg" alt="">
             </div>
-            </article>
             <article>
                 <div class="cabaña1">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat aperiam iure, sed perspiciatis
-                        laudantium obcaecati dolores blanditiis? Nisi blanditiis molestiae repellat tempore? Ipsa
-                        perspiciatis modi iusto facere officiis, voluptatibus harum.
-                        Vel vitae ipsa, dignissimos eveniet libero quae suscipit nemo quas velit sapiente esse unde
-                        delectus
-                        amet odit animi. Optio perspiciatis minus beatae similique quas at maiores eius temporibus nobis
-                        accusamus.
-                        Perferendis ex non harum? Reiciendis, fugit aliquid. Eveniet velit soluta fugit? Nulla facilis
-                        voluptas dignissimos nobis corrupti laborum ea? Assumenda odio totam repudiandae porro,
-                        perspiciatis
-                        eligendi dolorem corporis inventore. A.
-                        A id voluptatem odit vitae tempore nemo, explicabo consectetur soluta autem minus sunt! Minus
-                        aliquid qui pariatur vel deleniti eum vitae nam deserunt, esse quas temporibus aliquam maxime
-                        dolores ab!
-                        Laborum excepturi nam aliquam necessitatibus, provident libero deleniti quasi, ex nulla
-                        laboriosam
-                        adipisci eum soluta quaerat nisi eveniet quia, hic praesentium sunt fuga unde saepe. Expedita
-                        laboriosam animi repellat assumenda?</p>
-                    <img src="./Img/Nosotros 4.jpg" alt="">
+                    <p>Cómodas, funcionales, cálidas. Cabañas equipadas con todo lo necesario para sentirte como en
+                        casa. Diseñadas con la funcionalidad perfecta para adaptarse a todo tipo de descanso. En sus
+                        estructuras de cabañas típicas se priorizó la coherencia con el paisaje que conecta al interior
+                        de todas las unidades a través de ventanales. El estacionamiento y parrilla propios favorecen la
+                        privacidad propuesta por el complejo mientras que las galerías permiten convivir con los
+                        espacios comunes. El sistema de calefacción, la limpieza y el cuidado de las instalaciones
+                        refuerzan el concepto de una atención personalizada y de que un buen alojamiento es aquel que
+                        integra simpleza, confort y buen gusto.</p>
+                    <p>Prácticas, acogedoras, nobles. De contrucción tradicional, se caracterizan por su diseño y
+                        amplitud de sus ambientes. Redireccionadas para atrapar los mejores momentos de luz solar y
+                        dispuestas frente a la piscina común para compartir grandes momentos. </p>
+                    <img src="./img/Nosotros 4.jpg" alt="">
                 </div>
             </article>
             <article>
@@ -218,7 +210,7 @@
                         Quae corrupti ratione harum ducimus atque, nostrum eius nulla consequatur voluptas consequuntur
                         dicta, dolorum expedita pariatur. Id ea, at alias et, architecto beatae impedit ab minima
                         voluptates dignissimos mollitia quibusdam?</p>
-                    <img src="./Img/Nosotros 2.jpg" alt="">
+                    <img src="./img/Nosotros 2.jpg" alt="">
                 </div>
             </article>
         </section>
@@ -235,11 +227,11 @@
             <h4>Seguinos</h4>
             <nav>
                 <ul class="footer__info__link">
-                    <li> <a target="_blank" href="https://www.instagram.com/"><img src="./Iconos/Instagram.png" alt="">
+                    <li> <a target="_blank" href="https://www.instagram.com/"><img src="./iconos/Instagram.png" alt="">
                     </li>
-                    <li><a target="_blank" href="https://www.facebook.com"><img src="./Iconos/Facebook.png" alt=""></a>
+                    <li><a target="_blank" href="https://www.facebook.com"><img src="./iconos/Facebook.png" alt=""></a>
                     </li>
-                    <li> <a target="_blank" href="https://twitter.com/"><img src="./Iconos/Twitter.png" alt=""></a></li>
+                    <li> <a target="_blank" href="https://twitter.com/"><img src="./iconos/Twitter.png" alt=""></a></li>
                 </ul>
             </nav>
         </div>
@@ -248,4 +240,5 @@
         </div>
     </footer>
 </body>
+
 </html>
