--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -17,7 +17,7 @@
         <header>
             <div class="barraNavegacion">
                 <a href="#">
-                    <img src="../Iconos/logo-2.png" alt="Logo Moxy">
+                    <img src="../iconos/logo-2.png" alt="Logo Moxy">
                 </a>
                 <h1>Moxy</h1>
             </div>
@@ -170,14 +170,14 @@
 
         <aside>
             <div class="asideContacto">
-                <img class="asideImage" src="../Img/aside1.jpg" alt="">
-                <img class="asideImage" src="../Img/aside2.jpg" alt="">
-                <img class="asideImage" src="../Img/aside3.jpg" alt="">
-                <img class="asideImage" src="../Img/aside4.jpg" alt="">
-                <img class="asideImage" src="../Img/aside5.jpg" alt="">
-                <img class="asideImage" src="../Img/aside6.jpg" alt="">
-                <img class="asideImage" src="../Img/aside7.jpg" alt="">
-                <img class="asideImage" src="../Img/aside8.jpg" alt="">
+                <img class="asideImage" src="../img/aside1.jpg" alt="">
+                <img class="asideImage" src="../img/aside2.jpg" alt="">
+                <img class="asideImage" src="../img/aside3.jpg" alt="">
+                <img class="asideImage" src="../img/aside4.jpg" alt="">
+                <img class="asideImage" src="../img/aside5.jpg" alt="">
+                <img class="asideImage" src="../img/aside6.jpg" alt="">
+                <img class="asideImage" src="../img/aside7.jpg" alt="">
+                <img class="asideImage" src="../img/aside8.jpg" alt="">
             </div>
         </aside>
 
@@ -192,13 +192,13 @@
                 <h4>Seguinos</h4>
                 <nav>
                     <ul class="footer footer__info__link">
-                        <li> <a target="_blank" href="https://www.instagram.com/"><img src="../Iconos/Instagram.png"
+                        <li> <a target="_blank" href="https://www.instagram.com/"><img src="../iconos/Instagram.png"
                                     alt="">
                         </li>
-                        <li><a target="_blank" href="https://www.facebook.com"><img src="../Iconos/Facebook.png"
+                        <li><a target="_blank" href="https://www.facebook.com"><img src="../iconos/Facebook.png"
                                     alt=""></a>
                         </li>
-                        <li> <a target="_blank" href="https://twitter.com/"><img src="../Iconos/Twitter.png" alt=""></a>
+                        <li> <a target="_blank" href="https://twitter.com/"><img src="../iconos/Twitter.png" alt=""></a>
                         </li>
                     </ul>
                 </nav>
