--- a/pages/habitaciones.html
+++ b/pages/habitaciones.html
@@ -16,7 +16,7 @@
     <header>
         <div class="barraNavegacion">
             <a href="#">
-                <img src="../Iconos/logo-2.png" alt="Logo Moxy">
+                <img src="../iconos/logo-2.png" alt="Logo Moxy">
             </a>
             <h1>Moxy</h1>
         </div>
@@ -51,7 +51,7 @@
                             disponible para niños o bebes)</p>
                         <a href="./tarifas.html"> VER PRECIOS </a>
                     </div>
-                    <img src="../Img/habitacion-1.jpg" alt="habitacion 1">
+                    <img src="../img/habitacion-1.jpg" alt="habitacion 1">
                 </div>
                 <div class="suiteMatrimonial">
                     <div class="suiteInfo">
@@ -64,7 +64,7 @@
                         </p>
                         <a href="./tarifas.html"> VER PRECIOS </a>
                     </div>
-                    <img src="../Img/habitacion-2.jpg" alt="habitacion 2">
+                    <img src="../img/habitacion-2.jpg" alt="habitacion 2">
                 </div>
                 <div class="NOTA">
                     <p>NOTA:Las imagenes son ilustrativas. Todas nuestras habitaciones tienen un decorado distinto entre
@@ -90,7 +90,7 @@
                             Terraza exterior con parrilla y sector para mesa.</p>
                         <a href="./tarifas.html"> VER PRECIOS </a>
                     </div>
-                    <img src="../Img/Bungalows-1.jpg" alt="cabaña 1">
+                    <img src="../img/Bungalows-1.jpg" alt="cabaña 1">
                 </div>
             </article>
             <article class="suite">
@@ -107,7 +107,7 @@
                         </p>
                         <a href="./tarifas.html"> VER PRECIOS </a>
                     </div>
-                    <img src="../Img/Bungalows-2.jpg" alt="cabaña 2">
+                    <img src="../img/Bungalows-2.jpg" alt="cabaña 2">
                 </div>
             </article>
             <article class="suite">
@@ -124,7 +124,7 @@
                         </p>
                         <a href="./tarifas.html"> VER PRECIOS </a>
                     </div>
-                    <img src="../Img/Bungalows-3.jpg" alt="cabaña 3">
+                    <img src="../img/Bungalows-3.jpg" alt="cabaña 3">
                 </div>
             </article>
             <article class="suite">
@@ -141,7 +141,7 @@
                         </p>
                         <a href="./tarifas.html"> VER PRECIOS </a>
                     </div>
-                    <img src="../Img/Bungalows-4.jpg" alt="cabaña 4">
+                    <img src="../img/Bungalows-4.jpg" alt="cabaña 4">
                 </div>
             </article>
             <article class="suite">
@@ -157,7 +157,7 @@
                             Terraza exterior con parrilla y sector para mesa.</p>
                         <a href="./tarifas.html"> VER PRECIOS </a>
                     </div>
-                    <img class="atardecer" src="../Img/Bungalows-5.jpg" alt="cabaña 5">
+                    <img class="atardecer" src="../img/Bungalows-5.jpg" alt="cabaña 5">
                 </div>
             </article>
             <article>
@@ -191,7 +191,6 @@
                     </div>
                 </div>
             </article>
-
         </section>
     </main>
     <hr>
@@ -205,12 +204,12 @@
         <div class="footer__info">
             <h4>Seguinos</h4>
             <nav>
-                <ul class="footer footer__info__link">
-                    <li> <a target="_blank" href="https://www.instagram.com/"><img src="../Iconos/Instagram.png" alt="">
+                <ul>
+                    <li> <a target="_blank" href="https://www.instagram.com/"><img src="../iconos/Instagram.png" alt="">
                     </li>
-                    <li><a target="_blank" href="https://www.facebook.com"><img src="../Iconos/Facebook.png" alt=""></a>
+                    <li><a target="_blank" href="https://www.facebook.com"><img src="../iconos/Facebook.png" alt=""></a>
                     </li>
-                    <li> <a target="_blank" href="https://twitter.com/"><img src="../Iconos/Twitter.png" alt=""></a>
+                    <li> <a target="_blank" href="https://twitter.com/"><img src="../iconos/Twitter.png" alt=""></a>
                     </li>
                 </ul>
             </nav>
