--- a/pages/tarifas.html
+++ b/pages/tarifas.html
@@ -35,100 +35,61 @@
     <hr>
 
     <main>
-        <section class="map">
-            <nav>
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28477.63218807254!2d-65.7292225282011!3d-26.849364668373077!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94221877e80d28cf%3A0x7cf806901072e845!2zVGFmw60gZGVsIFZhbGxlLCBUdWN1bcOhbg!5e0!3m2!1ses!2sar!4v1692913319168!5m2!1ses!2sar"
-                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade">Ubicacion</iframe>
-            </nav>
+        <section>
+            <div>
+                <h1>TARIFAS</h1>
+                <p>Precios de lista mes en curso</p>
+            </div>
             <article>
-                <h3>¿Donde estamos?</h3>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi minus provident expedita ea error
-                    commodi, incidunt nam eaque rem ipsum obcaecati labore architecto, non tenetur deserunt
-                    praesentium?
-                    Obcaecati, eum incidunt.
-                    Distinctio ipsa, tempore officiis temporibus maxime dolore. Corrupti magnam assumenda nobis
-                    officiis
-                    distinctio soluta natus perspiciatis delectus dolorum numquam doloribus iure, veniam, ratione
-                    odio
-                    praesentium provident. Enim placeat optio voluptas.
-                    Doloremque, voluptatem necessitatibus, error illum culpa dicta, iusto officia unde rem
-                    praesentium
-                    totam minima vel at officiis sequi numquam. Ut officiis molestias magnam facere a? Quas eveniet
-                    nisi
-                    perferendis nulla!
-                    Adipisci esse inventore repellat deserunt. Veritatis porro minima ducimus voluptate numquam, est
-                    vero accusantium excepturi ab consequatur odio quos tempore harum neque omnis blanditiis!
-                    Distinctio
-                    minima odit ducimus rerum culpa?
-                    Explicabo fuga, sint tenetur quam eum fugit provident rem qui eaque ullam facere laboriosam
-                    ducimus.
-                    Expedita beatae omnis eligendi eos excepturi voluptate sint aperiam maxime, laudantium,
-                    voluptatum
-                    natus accusamus iste.
-                    Quaerat quibusdam vero eum ex deserunt dignissimos nihil rem ullam incidunt, tempora
-                    accusantium!
-                    Quam omnis deserunt minus commodi odit laborum? Ut velit quibusdam nobis impedit amet?
-                    Doloremque
-                    rerum modi exercitationem.
-                    Quos, dolores blanditiis. Cupiditate, aspernatur repellendus? Voluptas excepturi repudiandae
-                    voluptatem ad, doloribus culpa at cupiditate molestias nesciunt, odio dignissimos cumque
-                    praesentium
-                    quaerat libero quasi eum nisi cum quo sequi. Blanditiis?
-                    Alias vero non eos minus veniam ipsa corrupti libero impedit est quas beatae cupiditate quos at
-                    amet, natus voluptatibus exercitationem facilis officiis facere ratione nihil illum! Dolores
-                    unde
-                    dolore quos?
-                    Quidem magni amet alias corrupti rerum omnis temporibus quibusdam consequatur nemo itaque
-                    voluptate
-                    quam voluptatem corporis dolorum esse vero magnam, doloribus reiciendis consectetur autem vel
-                    officiis iste? Sed, praesentium aliquid.
-                    Velit repellat, maiores veritatis incidunt soluta vitae voluptate perspiciatis nulla doloribus
-                    quae
-                    quos tenetur maxime numquam pariatur necessitatibus vel ipsum blanditiis harum iusto cupiditate
-                    aut!
-                    Quas, ipsa. Nemo, illum eveniet.
-                </p>
+                <div>
+                    <h4>Suite Matrimonial</h4>
+                    <p>Precio de lista por noche $39.900</p>
+                    <a href="./habitaciones.html">AMPLIAR INFO</a>
+                </div>
+                <div>
+                    <h4>Suite Matrimonial Plus</h4>
+                    <p>Precio de lista por noche $44.900</p>
+                    <a href="./habitaciones.html">AMPLIAR INFO</a>
+                </div>
+                <div>
+                    <h4>Bungalow familiar</h4>
+                    <p>Precio de lista por noche $59.900 p/3 personas</p>
+                    <p>Precio de lista por noche $69.900 p/4 personas</p>
+                    <a href="./habitaciones.html">AMPLIAR INFO</a>
+                </div>
+            </article>
+            <div>
+                <h4>Ropa de cama y toallas:</h4>
+            </div>
+            <article>
+                <div>
+                    <p>Las unidades se entregan listas con las camas tendidas y sus correspondientes sabanas,almohadas y
+                        cobertores.</p>
+                    <p>Las sabanas se recambian cada 3 / 4 dias segun la totalidad de estadia. Estos recambios estan
+                        incluidos en la tarifa. Si solicita recambios adicionales tiene costo adicional.</p>
+                </div>
+                <div>
+                    <h3>LISTA DE PRECIOS RECAMBIOS ADICIONALES</h3>
+                    <div>
+                        <li>Toalla de mano $400</li>
+                        <li>Toallon $500</li>
+                        <li>Recambio de sabanas $700</li>
+                    </div>
+                </div>
             </article>
             <article>
-                <h3>Como llegar</h3>
-                <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse repellendus, repudiandae
-                    cupiditate
-                    aliquam eum voluptatibus quas magni eos similique molestiae excepturi impedit incidunt nihil
-                    veritatis vitae tempora necessitatibus voluptate iusto.
-                    A ad vel quae recusandae obcaecati repellat facere autem, minus sed. Fugit eligendi nemo neque
-                    porro
-                    earum. Nobis maiores ex dolorum consectetur minus reprehenderit ipsa magni, aliquid rerum quas
-                    ducimus.
-                    Rem eius tenetur earum, ut laudantium labore obcaecati commodi sunt autem inventore vitae rerum
-                    blanditiis? Eius esse porro totam sequi, beatae voluptatum eveniet optio nemo! Quisquam
-                    cupiditate
-                    deleniti nihil expedita?
-                    Facilis natus doloribus eum saepe est eos odit porro eaque tempore reiciendis officiis deleniti,
-                    animi repellendus, corporis numquam ex laboriosam sapiente aperiam culpa! Est, quod libero?
-                    Molestiae ipsum molestias inventore.
-                    Error iure consectetur delectus nisi possimus illo cum corporis. Error quis dolor consequuntur
-                    reprehenderit? Deleniti ipsam doloremque odit magni nostrum repellat deserunt, sit natus? Rerum
-                    voluptatibus magnam explicabo ipsum repudiandae.
-                    Debitis illo ad, facilis nostrum incidunt natus officiis similique dolore impedit nobis nam aut
-                    cupiditate sunt inventore eum reprehenderit ullam? Ipsa, consequatur nisi sequi nobis cum
-                    commodi
-                    impedit est minima.
-                    Ipsa voluptates amet atque soluta doloremque quas facere molestiae illo, sunt quaerat. Magnam
-                    soluta
-                    atque deserunt aliquid aperiam nam quas labore, necessitatibus voluptate ea. Animi quo
-                    dignissimos
-                    libero sed non?
-                    Nisi, facilis nemo minus blanditiis molestiae vitae voluptate quia sit saepe provident
-                    temporibus
-                    eaque debitis atque? Et dolorum dignissimos in mollitia similique aliquam nulla assumenda.
-                    Nostrum
-                    dolorem tempora eligendi est.
-                </p>
+                <div>
+                    <p>HORARIOS DE ESTADIA: de 14 a 10am - Consulte opcion por estadia prolongada (sujeto a
+                        disponibilidad)</p>
+                    <hr>
+                    <p>Para mas consultas TEL:223-9123456 Todos los dias de 9 a 20 Hs.</p>
+                    <img src="../img/tarifas_booking.png" alt="booking">
+                    <p>Si ya realizó la compra, contactenos al: 223-9123456</p>
+                </div>
             </article>
+        </section>
+        <section>
+            
         </section>
     </main>
 
@@ -149,7 +110,8 @@
                     </li>
                     <li><a target="_blank" href="https://www.facebook.com"><img src="../iconos/Facebook.png" alt=""></a>
                     </li>
-                    <li> <a target="_blank" href="https://twitter.com/"><img src="../iconos/Twitter.png" alt=""></a></li>
+                    <li> <a target="_blank" href="https://twitter.com/"><img src="../iconos/Twitter.png" alt=""></a>
+                    </li>
                 </ul>
             </nav>
         </div>
