--- a/pages/tarifas.html
+++ b/pages/tarifas.html
@@ -34,13 +34,13 @@
 
     <hr>
 
-    <main>
-        <section>
+    <main id="tarifasPromos">
+        <section id="tarifas">
             <div>
                 <h1>TARIFAS</h1>
                 <p>Precios de lista mes en curso</p>
             </div>
-            <article>
+            <article class="cotizacion">
                 <div>
                     <h4>Suite Matrimonial</h4>
                     <p>Precio de lista por noche $39.900</p>
@@ -88,8 +88,32 @@
                 </div>
             </article>
         </section>
-        <section>
-            
+        <section id="promos">
+            <div>
+                <h3>¡PROMOCIONES!</h3>
+            </div>
+            <article>
+                <div>
+                    <h4>VERANO 2024</h4>
+                    <p>Preventa a precio de lista actual para el verano 2024.
+                        Valida para estadias de 5 noches o mas, pago por transferencia.
+                    </p>
+                    <p>Ganale a la inflacion!</p>
+                </div>
+                <div>
+                    <h4>PAGOS CON TARJETA</h4>
+                    <p>6 CUOTAS Para tarjetas Visa y Mastercard de Bnaco Nacios. Otras tarjetas 3 cuotas.
+                        Adiciona 10% de interes. Aplica sobre precio de lista mes en curso.
+                    </p>
+                </div>
+                <div>
+                    <h4>MONEDAS DE PAGO ALTERNATIVAS</h4>
+                    <p>Peso Chileno,Reales,Dolares,Euros. Transferencia por PayPal o Binance</p>
+                </div>
+                <div>
+                    <h3>SI NO APROVECHAS ESTAS PROMOS ¡ESTAS PERDIENDO PLATA!</h3>
+                </div>
+            </article>
         </section>
     </main>
 
