--- a/pages/habitaciones.html
+++ b/pages/habitaciones.html
@@ -16,7 +16,7 @@
     <header>
         <div class="barraNavegacion">
             <a href="#">
-                <img src="../Iconos/logo-2.png" alt="Logo Moxy">
+                <img src="../Iconos/logo_2.png" alt="Logo Moxy">
             </a>
             <h1>Moxy</h1>
         </div>
@@ -51,7 +51,7 @@
                             disponible para niños o bebes)</p>
                         <a href="./tarifas.html"> VER PRECIOS </a>
                     </div>
-                    <img src="../img/habitacion-1.jpg" alt="habitacion 1">
+                    <img src="../Img/habitacion-1.jpg" alt="habitacion1">
                 </div>
                 <div class="suiteMatrimonial">
                     <div class="suiteInfo">
@@ -64,7 +64,7 @@
                         </p>
                         <a href="./tarifas.html"> VER PRECIOS </a>
                     </div>
-                    <img src="../img/habitacion-2.jpg" alt="habitacion 2">
+                    <img src="../img/habitacion-2.jpg" alt="habitacion2">
                 </div>
                 <div class="NOTA">
                     <p>NOTA:Las imagenes son ilustrativas. Todas nuestras habitaciones tienen un decorado distinto entre
@@ -90,7 +90,7 @@
                             Terraza exterior con parrilla y sector para mesa.</p>
                         <a href="./tarifas.html"> VER PRECIOS </a>
                     </div>
-                    <img src="../img/Bungalows-1.jpg" alt="cabaña 1">
+                    <img src="../img/Bungalows-1.jpg" alt="cabaña1">
                 </div>
             </article>
             <article class="suite">
@@ -107,7 +107,7 @@
                         </p>
                         <a href="./tarifas.html"> VER PRECIOS </a>
                     </div>
-                    <img src="../img/Bungalows-2.jpg" alt="cabaña 2">
+                    <img src="../img/Bungalows-2.jpg" alt="cabaña2">
                 </div>
             </article>
             <article class="suite">
@@ -124,7 +124,7 @@
                         </p>
                         <a href="./tarifas.html"> VER PRECIOS </a>
                     </div>
-                    <img src="../img/Bungalows-3.jpg" alt="cabaña 3">
+                    <img src="../img/Bungalows-3.jpg" alt="cabaña3">
                 </div>
             </article>
             <article class="suite">
@@ -141,7 +141,7 @@
                         </p>
                         <a href="./tarifas.html"> VER PRECIOS </a>
                     </div>
-                    <img src="../img/Bungalows-4.jpg" alt="cabaña 4">
+                    <img src="../img/Bungalows-4.jpg" alt="cabaña4">
                 </div>
             </article>
             <article class="suite">
@@ -157,7 +157,7 @@
                             Terraza exterior con parrilla y sector para mesa.</p>
                         <a href="./tarifas.html"> VER PRECIOS </a>
                     </div>
-                    <img class="atardecer" src="../img/Bungalows-5.jpg" alt="cabaña 5">
+                    <img class="atardecer" src="../img/Bungalows-5.jpg" alt="cabaña5">
                 </div>
             </article>
             <article>
