--- a/pages/habitaciones.html
+++ b/pages/habitaciones.html
@@ -51,7 +51,7 @@
                             disponible para niños o bebes)</p>
                         <a href="./tarifas.html"> VER PRECIOS </a>
                     </div>
-                    <img src="../Img/habitacion-1.jpg" alt="habitacion1">
+                    <img src="../Img/habitacion_1.jpg" alt="habitacion1">
                 </div>
                 <div class="suiteMatrimonial">
                     <div class="suiteInfo">
@@ -64,7 +64,7 @@
                         </p>
                         <a href="./tarifas.html"> VER PRECIOS </a>
                     </div>
-                    <img src="../img/habitacion-2.jpg" alt="habitacion2">
+                    <img src="../Img/habitacion_2.jpg" alt="habitacion2">
                 </div>
                 <div class="NOTA">
                     <p>NOTA:Las imagenes son ilustrativas. Todas nuestras habitaciones tienen un decorado distinto entre
@@ -90,7 +90,7 @@
                             Terraza exterior con parrilla y sector para mesa.</p>
                         <a href="./tarifas.html"> VER PRECIOS </a>
                     </div>
-                    <img src="../img/Bungalows-1.jpg" alt="cabaña1">
+                    <img src="../Img/Bungalows_1.jpg" alt="cabaña1">
                 </div>
             </article>
             <article class="suite">
@@ -107,7 +107,7 @@
                         </p>
                         <a href="./tarifas.html"> VER PRECIOS </a>
                     </div>
-                    <img src="../img/Bungalows-2.jpg" alt="cabaña2">
+                    <img src="../Img/Bungalows_2.jpg" alt="cabaña2">
                 </div>
             </article>
             <article class="suite">
@@ -124,7 +124,7 @@
                         </p>
                         <a href="./tarifas.html"> VER PRECIOS </a>
                     </div>
-                    <img src="../img/Bungalows-3.jpg" alt="cabaña3">
+                    <img src="../img/Bungalows_3.jpg" alt="cabaña3">
                 </div>
             </article>
             <article class="suite">
@@ -141,7 +141,7 @@
                         </p>
                         <a href="./tarifas.html"> VER PRECIOS </a>
                     </div>
-                    <img src="../img/Bungalows-4.jpg" alt="cabaña4">
+                    <img src="../img/Bungalows_4.jpg" alt="cabaña4">
                 </div>
             </article>
             <article class="suite">
