--- a/pages/habitaciones.html
+++ b/pages/habitaciones.html
@@ -90,7 +90,7 @@
                             Terraza exterior con parrilla y sector para mesa.</p>
                         <a href="./tarifas.html"> VER PRECIOS </a>
                     </div>
-                    <img src="../Img/Bungalows_1.jpg" alt="cabaña1">
+                    <img src="../Img/bungalows_1.jpg" alt="cabaña1">
                 </div>
             </article>
             <article class="suite">
@@ -107,7 +107,7 @@
                         </p>
                         <a href="./tarifas.html"> VER PRECIOS </a>
                     </div>
-                    <img src="../Img/Bungalows_2.jpg" alt="cabaña2">
+                    <img src="../Img/bungalows_2.jpg" alt="cabaña2">
                 </div>
             </article>
             <article class="suite">
@@ -124,7 +124,7 @@
                         </p>
                         <a href="./tarifas.html"> VER PRECIOS </a>
                     </div>
-                    <img src="../img/Bungalows_3.jpg" alt="cabaña3">
+                    <img src="../img/bungalows_3.jpg" alt="cabaña3">
                 </div>
             </article>
             <article class="suite">
