prueba solucion img

--- a/pages/habitaciones.html
+++ b/pages/habitaciones.html
@@ -124,7 +124,7 @@
                         </p>
                         <a href="./tarifas.html"> VER PRECIOS </a>
                     </div>
-                    <img src="../img/bungalows_3.jpg" alt="cabaña3">
+                    <img src="../Img/bungalows_3.jpg" alt="cabaña3">
                 </div>
             </article>
             <article class="suite">
@@ -141,7 +141,7 @@
                         </p>
                         <a href="./tarifas.html"> VER PRECIOS </a>
                     </div>
-                    <img src="../img/Bungalows_4.jpg" alt="cabaña4">
+                    <img src="../Img/Bungalows_4.jpg" alt="cabaña4">
                 </div>
             </article>
             <article class="suite">
@@ -157,7 +157,7 @@
                             Terraza exterior con parrilla y sector para mesa.</p>
                         <a href="./tarifas.html"> VER PRECIOS </a>
                     </div>
-                    <img class="atardecer" src="../img/Bungalows-5.jpg" alt="cabaña5">
+                    <img class="atardecer" src="../Img/Bungalows-5.jpg" alt="cabaña5">
                 </div>
             </article>
             <article>
