--- a/pages/tarifas.html
+++ b/pages/tarifas.html
@@ -17,7 +17,7 @@
     <header>
         <div class="barraNavegacion">
             <a href="#">
-                <img src="../iconos/logo-2.png" alt="Logo Moxy">
+                <img src="../Iconos/logo-2.png" alt="Logo Moxy">
             </a>
             <h1>Moxy</h1>
         </div>
