--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
                 </article>
                 <article>
                     <div class="imagenes">
-                        <img src="./img/paisaje-tafi-main.jpg" alt="paisaje tafi">
-                        <img src="./img/paisaje-cabaña-main.jpg" alt="paisaje portada">
+                        <img src="./Img/paisaje_tafi_main.jpg" alt="paisaje tafi">
+                        <img src="./Img/paisaje_cabaña_main.jpg" alt="paisaje portada">
                     </div>
                 </article>
                 <article>
@@ -175,7 +175,7 @@
                     a
                     cada necesidad y expectativa.
                 </p>
-                <img src="./img/cabaña-tafi.jpg" alt="">
+                <img src="./Img/cabaña_tafi.jpg" alt="">
             </div>
             <article>
                 <div class="cabaña1">
@@ -190,7 +190,7 @@
                     <p>Prácticas, acogedoras, nobles. De contrucción tradicional, se caracterizan por su diseño y
                         amplitud de sus ambientes. Redireccionadas para atrapar los mejores momentos de luz solar y
                         dispuestas frente a la piscina común para compartir grandes momentos. </p>
-                    <img src="./img/Nosotros 4.jpg" alt="">
+                    <img src="./Img/Nosotros_4.jpg" alt="">
                 </div>
             </article>
             <article>
@@ -210,7 +210,7 @@
                         Quae corrupti ratione harum ducimus atque, nostrum eius nulla consequatur voluptas consequuntur
                         dicta, dolorum expedita pariatur. Id ea, at alias et, architecto beatae impedit ab minima
                         voluptates dignissimos mollitia quibusdam?</p>
-                    <img src="./img/Nosotros 2.jpg" alt="">
+                    <img src="./Img/Nosotros_2.jpg" alt="">
                 </div>
             </article>
         </section>
