--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -17,7 +17,7 @@
         <header>
             <div class="barraNavegacion">
                 <a href="#">
-                    <img src="../iconos/logo-2.png" alt="Logo Moxy">
+                    <img src="../Iconos/logo-2.png" alt="Logo Moxy">
                 </a>
                 <h1>Moxy</h1>
             </div>
@@ -170,14 +170,14 @@
 
         <aside>
             <div class="asideContacto">
-                <img class="asideImage" src="../img/aside1.jpg" alt="">
-                <img class="asideImage" src="../img/aside2.jpg" alt="">
-                <img class="asideImage" src="../img/aside3.jpg" alt="">
-                <img class="asideImage" src="../img/aside4.jpg" alt="">
-                <img class="asideImage" src="../img/aside5.jpg" alt="">
-                <img class="asideImage" src="../img/aside6.jpg" alt="">
-                <img class="asideImage" src="../img/aside7.jpg" alt="">
-                <img class="asideImage" src="../img/aside8.jpg" alt="">
+                <img class="asideImage" src="../Img/aside1.jpg" alt="">
+                <img class="asideImage" src="../Img/aside2.jpg" alt="">
+                <img class="asideImage" src="../Img/aside3.jpg" alt="">
+                <img class="asideImage" src="../Img/aside4.jpg" alt="">
+                <img class="asideImage" src="../Img/aside5.jpg" alt="">
+                <img class="asideImage" src="../Img/aside6.jpg" alt="">
+                <img class="asideImage" src="../Img/aside7.jpg" alt="">
+                <img class="asideImage" src="../Img/aside8.jpg" alt="">
             </div>
         </aside>
 
